[project]
name = "pyctiarbin"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Anson Yu", email = "ansonyu24@gmail.com" }
]
dependencies = [
    "pydantic>=2.4.2",
    "python-dotenv>=1.0.0",
    "pytest>=8.2.2",
    "notebook>=7.2.1",
    "influxdb3-python>=0.7.0",
    "pandas>=2.0.3",
    "pymssql>=2.3.0",
    "pyodbc>=5.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pyctiarbin"]
